namespaces/cloud-platform-live-0.k8s.integration.dsd.io/formbuilder-platform-integration-production/04-networkpolicy.yaml
---
# Source: formbuilder-platform/templates/04-networkpolicy.yaml
# auto-generated from fb-cloud-platforms-environments
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: formbuilder-platform-integration-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: formbuilder-platform-integration-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
